tests/baselines/reference/ambientModuleDeclarationWithReservedIdentifierInDottedPath.errors.txt
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(3,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(3,23): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(9,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(9,21): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,1): error TS2304: Cannot find name 'declare'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,9): error TS2304: Cannot find name 'namespace'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,19): error TS2819: Namespace name cannot be 'debugger'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,28): error TS1005: ';' expected.


==== ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts (8 errors) ====
    // https://github.com/microsoft/TypeScript/issues/7840
    
    declare module chrome.debugger {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                          ~~~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        declare var tabId: number;
    }
    
    export const tabId = chrome.debugger.tabId;
    
    declare module test.class {}
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                        ~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    declare namespace debugger {} // still an error
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~~~~
!!! error TS2304: Cannot find name 'namespace'.
                      ~~~~~~~~
!!! error TS2819: Namespace name cannot be 'debugger'.
                               ~
!!! error TS1005: ';' expected.
    